--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,3 +72,6 @@ set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
